ingress-practices/nginx-jyjt/meet-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: meet-ingress
  namespace: app-prod
spec:
  ingressClassName: nginx
  rules:
  - host: "meet.juneyaokc.com"
    http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: meet-clusterip
            port:
              number: 8085
