ingress-practices/nginx-jyjt/vue-http.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vue-http
  namespace: app-prod
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: "vue.juneyaokc.com"
    http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: vue-clusterip
            port:
              number: 8083
