ingress-practices/nginx-jyjt/vue-https.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vue-https
  namespace: app-prod
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: "vue.juneyaokc.com"
    http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: vue-clusterip
            port:
              number: 8083
  tls:
    - hosts:
      - vue.juneyaokc.com
      secretName: juneyaokc-nginx-secret
